--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,12 +1,9 @@
 <div class="container">
 <h1>Add restaurant</h1>
 <%= simple_form_for @restaurant do |f| %>
-    <%= f.label :name %>
-    <%= f.text_area :name %>
-    <%= f.label :address %>
-    <%= f.text_area :address %>
-    <%= f.label :phone_number %>
-    <%= f.text_area :phone_number %>
+    <%= f.input :name %>
+    <%= f.input :address %>
+    <%= f.input :phone_number %>
     <%= f.submit %>
 <% end %>
 </div>
